tests/should_fail/bug/492.coma
module M_reborrow_tuple
  use creusot.prelude.MutBorrow
  use creusot.int.UInt32
  use creusot.prelude.Any
  
  type t_T
  
  predicate inv_T (_1: t_T)
  
  type tup2_ref_T_u32 = { f0: MutBorrow.t t_T; f1: UInt32.t }
  
  predicate invariant_ref_T [@inline:trivial] (self: MutBorrow.t t_T) = inv_T self.current /\ inv_T self.final
  
  meta "rewrite_def" predicate invariant_ref_T
  
  predicate inv_ref_T [@inline:trivial] (_1: MutBorrow.t t_T) = invariant_ref_T _1
  
  meta "rewrite_def" predicate inv_ref_T
  
  predicate resolve_ref_T [@inline:trivial] (_1: MutBorrow.t t_T) = _1.final = _1.current
  
  meta "rewrite_def" predicate resolve_ref_T
  
  predicate inv_tup2_ref_T_u32 [@inline:trivial] (_1: tup2_ref_T_u32) = inv_ref_T _1.f0
  
  meta "rewrite_def" predicate inv_tup2_ref_T_u32
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec reborrow_tuple_T (x: MutBorrow.t t_T) (return (x'0: tup2_ref_T_u32)) =
    {[@expl:reborrow_tuple 'x' type invariant] inv_ref_T x}
    (! bb0
    [ bb0 = s0
      [ s0 = {inv_T x.current}
        MutBorrow.borrow_final <t_T> {x.current} {MutBorrow.get_id x}
          (fun (_bor: MutBorrow.t t_T) ->
            [ &_4 <- _bor ] -{inv_T _bor.final}-
            [ &x <- { x with current = _bor.final } ] s1)
      | s1 = [ &_ret <- { f0 = _4; f1 = (32: UInt32.t) } ] s2
      | s2 = s3 [ _ck -> (! {[@expl:type invariant] inv_ref_T x} any) ]
      | s3 = -{resolve_ref_T x}- s4
      | s4 = return {_ret} ] ]
    [ & _ret: tup2_ref_T_u32 = Any.any_l () | & x: MutBorrow.t t_T = x | & _4: MutBorrow.t t_T = Any.any_l () ])
    [ return (result: tup2_ref_T_u32) -> {[@expl:reborrow_tuple result type invariant] inv_tup2_ref_T_u32 result}
      {[@expl:reborrow_tuple ensures] result.f0.current = x.current}
      (! return {result}) ]
end
module M_test
  use creusot.int.Int32
  use creusot.prelude.MutBorrow
  use creusot.int.UInt32
  use creusot.prelude.Any
  
  type tup2_ref_i32_u32 = { f0: MutBorrow.t Int32.t; f1: UInt32.t }
  
  let rec reborrow_tuple_i32 (x: MutBorrow.t Int32.t) (return (x'0: tup2_ref_i32_u32)) = any
    [ return (result: tup2_ref_i32_u32) -> {result.f0.current = x.current} (! return {result}) ]
  
  predicate resolve_ref_i32 [@inline:trivial] (_1: MutBorrow.t Int32.t) = _1.final = _1.current
  
  meta "rewrite_def" predicate resolve_ref_i32
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec test (return (x: ())) = (! bb0
    [ bb0 = s0
      [ s0 = [ &x <- (5: Int32.t) ] s1
      | s1 = MutBorrow.borrow_mut <Int32.t> {x}
          (fun (_bor: MutBorrow.t Int32.t) -> [ &_6 <- _bor ] [ &x <- _bor.final ] s2)
      | s2 = MutBorrow.borrow_final <Int32.t> {_6.current} {MutBorrow.get_id _6}
          (fun (_bor: MutBorrow.t Int32.t) -> [ &_5 <- _bor ] [ &_6 <- { _6 with current = _bor.final } ] s3)
      | s3 = reborrow_tuple_i32 {_5} (fun (_x: tup2_ref_i32_u32) -> [ &_4 <- _x ] s4)
      | s4 = [ &res <- _4.f0 ] s5
      | s5 = -{resolve_ref_i32 _6}- s6
      | s6 = {[@expl:assertion] res.final = (5: Int32.t)} s7
      | s7 = [ &res <- { res with current = (10: Int32.t) } ] s8
      | s8 = -{resolve_ref_i32 res}- s9
      | s9 = return {_ret} ] ]
    [ & _ret: () = Any.any_l ()
    | & x: Int32.t = Any.any_l ()
    | & res: MutBorrow.t Int32.t = Any.any_l ()
    | & _4: tup2_ref_i32_u32 = Any.any_l ()
    | & _5: MutBorrow.t Int32.t = Any.any_l ()
    | & _6: MutBorrow.t Int32.t = Any.any_l () ])
    [ return (result: ()) -> {[@expl:test ensures] false} (! return {result}) ]
end
